Fix overflow of inside-letter

--- a/src/components/views/Welcome/Welcome.css
+++ b/src/components/views/Welcome/Welcome.css
@@ -29,7 +29,6 @@ span {
 .inside-letter {
   font-size: 1rem;
   padding: 0 10px;
-  overflow: hidden;
   opacity: 1;
   animation: inside-letter 3s ease-in-out infinite alternate;
 }
